--- a/auto-fill-fit.html
+++ b/auto-fill-fit.html
@@ -17,55 +17,57 @@
         <span class="icon">•••</span>
     </div>
 
-    auto-fill
-    <div class="grid-container grid-container--fill">
-        <div class="grid-element">
-            1
+    <div class="container">
+        auto-fill
+        <div class="grid-container grid-container--fill">
+            <div class="grid-element">
+                1
+            </div>
+            <div class="grid-element">
+                2
+            </div>
+            <div class="grid-element">
+                3
+            </div>
+            <div class="grid-element">
+                4
+            </div>
+            <div class="grid-element">
+                5
+            </div>
+            <div class="grid-element">
+                6
+            </div>
+            <div class="grid-element">
+                7
+            </div>
         </div>
-        <div class="grid-element">
-            2
-        </div>
-        <div class="grid-element">
-            3
-        </div>
-        <div class="grid-element">
-            4
-        </div>
-        <div class="grid-element">
-            5
-        </div>
-        <div class="grid-element">
-            6
-        </div>
-        <div class="grid-element">
-            7
-        </div>
-    </div>
 
-    <hr>
+        <hr>
 
-    auto-fit
-    <div class="grid-container grid-container--fit">
-        <div class="grid-element">
-            1
-        </div>
-        <div class="grid-element">
-            2
-        </div>
-        <div class="grid-element">
-            3
-        </div>
-        <div class="grid-element">
-            4
-        </div>
-        <div class="grid-element">
-            5
-        </div>
-        <div class="grid-element">
-            6
-        </div>
-        <div class="grid-element">
-            7
+        auto-fit
+        <div class="grid-container grid-container--fit">
+            <div class="grid-element">
+                1
+            </div>
+            <div class="grid-element">
+                2
+            </div>
+            <div class="grid-element">
+                3
+            </div>
+            <div class="grid-element">
+                4
+            </div>
+            <div class="grid-element">
+                5
+            </div>
+            <div class="grid-element">
+                6
+            </div>
+            <div class="grid-element">
+                7
+            </div>
         </div>
     </div>
 </body>
