--- a/column-rows.html
+++ b/column-rows.html
@@ -18,8 +18,10 @@
     </div>
 
     <div class="container">
-        <div class="item">
-            <div class="sub-item"></div>
+        <div class="container_item">
+            <div class="item">
+                <div class="sub-item"></div>
+            </div>
         </div>
     </div>
 </body>
