--- a/minmax.html
+++ b/minmax.html
@@ -6,37 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/minmax.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Function: repeat(), minmax() y fit-content()</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Function: repeat(), minmax() y fit-content() 💚</p>
+        <span class="icon">•••</span>
     </div>
 
-    <div class="container">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-    </div>
+    <div class="container_main">
+        <div class="container">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+        </div>
 
-    <br>
+        <br>
 
-    <div class="container_two">
-        <div class="item-two"></div>
-        <div class="item-two"></div>
-        <div class="item-two"></div>
-        <div class="item-two"></div>
-        <div class="item-two"></div>
-    </div>
+        <div class="container_two">
+            <div class="item-two"></div>
+            <div class="item-two"></div>
+            <div class="item-two"></div>
+            <div class="item-two"></div>
+            <div class="item-two"></div>
+        </div>
 
-    <br>
-    <div class="container_three">
-        <div class="item-three"></div>
-        <div class="item-three">Fit-content()</div>
-        <div class="item-three"></div>
+        <br>
+        <div class="container_three">
+            <div class="item-three"></div>
+            <div class="item-three">Fit-content()</div>
+            <div class="item-three"></div>
+        </div>
     </div>
 </body>
 
