--- a/quiz-place-content.html
+++ b/quiz-place-content.html
@@ -6,12 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/quiz-place-content.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/header.css">
+    <title>Quiz Place Content</title>
 </head>
 
 <body>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Quiz Place Content 💚</p>
+        <span class="icon">•••</span>
+    </div>
+
     <div class="container">
-        <div class="item"></div>
+        <div class="container_item">
+            <div class="item"></div>
+        </div>
     </div>
 </body>
 
