--- a/grid_margin.html
+++ b/grid_margin.html
@@ -20,80 +20,82 @@
     </div>
 
     <!-- Margin start -->
-    <div class="wrapper-start">
-        <div class="container-margin-start">
-            <div class="element element-one-margin-start">top left</div>
+    <div class="wrapper-content">
+        <div class="wrapper-start">
+            <div class="container-margin-start">
+                <div class="element element-one-margin-start">top left</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-two-margin-start">center left</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-three-margin-start">bottom left</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-four-margin-start">top center</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-five-margin-start">center center</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-six-margin-start">bottom center</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-seven-margin-start">top right</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-eight-margin-start">center right</div>
+            </div>
+
+            <div class="container-margin-start">
+                <div class="element element-nine-margin-start">bottom right</div>
+            </div>
         </div>
 
-        <div class="container-margin-start">
-            <div class="element element-two-margin-start">center left</div>
-        </div>
+        <!-- Margin end -->
+        <div class="wrapper-end">
+            <div class="container-margin-end">
+                <div class="element element-one-margin">top left</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-three-margin-start">bottom left</div>
-        </div>
+            <div class="container-margin-end">
+                <div class="element element-two-margin">center left</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-four-margin-start">top center</div>
-        </div>
+            <div class="container-margin-end">
+                <div class="element element-three-margin">bottom left</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-five-margin-start">center center</div>
-        </div>
+            <div class="container-margin-end">
+                <div class="element element-four-margin">top center</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-six-margin-start">bottom center</div>
-        </div>
+            <div class="container-margin-end">
+                <div class="element element-five-margin">center center</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-seven-margin-start">top right</div>
-        </div>
+            <div class="container-margin-end">
+                <div class="element element-six-margin">bottom center</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-eight-margin-start">center right</div>
-        </div>
+            <div class="container-margin-end">
+                <div class="element element-seven-margin">top right</div>
+            </div>
 
-        <div class="container-margin-start">
-            <div class="element element-nine-margin-start">bottom right</div>
-        </div>
-    </div>
+            <div class="container-margin-end">
+                <div class="element element-eight-margin">center right</div>
+            </div>
 
-    <!-- Margin end -->
-    <div class="wrapper-end">
-        <div class="container-margin-end">
-            <div class="element element-one-margin">top left</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-two-margin">center left</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-three-margin">bottom left</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-four-margin">top center</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-five-margin">center center</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-six-margin">bottom center</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-seven-margin">top right</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-eight-margin">center right</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-nine-margin">bottom right</div>
+            <div class="container-margin-end">
+                <div class="element element-nine-margin">bottom right</div>
+            </div>
         </div>
     </div>
 </body>
