--- a/pages/line-height.html
+++ b/pages/line-height.html
@@ -19,84 +19,85 @@
         <span class="icon">•••</span>
     </div>
 
-    <div class="wrapper-start">
-        <!-- Line-height start-->
-        <div class="container-start container-one">
-            <div class="element element-one-line-height">top left</div>
+    <!-- Line-height start-->
+    <div class="wrapper-content">
+        <div class="wrapper-start">
+            <div class="container-start container-one">
+                <div class="element element-one-line-height">top left</div>
+            </div>
+
+            <div class="container-start container-one">
+                <div class="element element-two-line-height">center left</div>
+            </div>
+
+            <div class="container-start container-one">
+                <div class="element element-three-line-height">bottom left</div>
+            </div>
+
+            <div class="container-start container-two">
+                <div class="element element-four-line-height">top center</div>
+            </div>
+
+            <div class="container-start container-two">
+                <div class="element element-five-line-height">center center</div>
+            </div>
+
+            <div class="container-start container-two">
+                <div class="element element-six-line-height">bottom center</div>
+            </div>
+
+            <div class="container-start container-three">
+                <div class="element element-seven-line-height">top right</div>
+            </div>
+
+            <div class="container-start container-three">
+                <div class="element element-eight-line-height">center right</div>
+            </div>
+
+            <div class="container-start container-three">
+                <div class="element element-nine-line-height">bottom right</div>
+            </div>
         </div>
 
-        <div class="container-start container-one">
-            <div class="element element-two-line-height">center left</div>
-        </div>
+        <div class="wrapper-end">
+            <!-- Line-height end -->
+            <div class="container container-one-line">
+                <div class="element element-one-line">top left</div>
+            </div>
 
-        <div class="container-start container-one">
-            <div class="element element-three-line-height">bottom left</div>
-        </div>
+            <div class="container container-one-line">
+                <div class="element element-two-line">center left</div>
+            </div>
 
-        <div class="container-start container-two">
-            <div class="element element-four-line-height">top center</div>
-        </div>
+            <div class="container container-one-line">
+                <div class="element element-three-line">bottom left</div>
+            </div>
 
-        <div class="container-start container-two">
-            <div class="element element-five-line-height">center center</div>
-        </div>
+            <div class="container container-two-line">
+                <div class="element element-four-line">top center</div>
+            </div>
 
-        <div class="container-start container-two">
-            <div class="element element-six-line-height">bottom center</div>
-        </div>
+            <div class="container container-two-line">
+                <div class="element element-five-line">center center</div>
+            </div>
 
-        <div class="container-start container-three">
-            <div class="element element-seven-line-height">top right</div>
-        </div>
+            <div class="container container-two-line">
+                <div class="element element-six-line">bottom center</div>
+            </div>
 
-        <div class="container-start container-three">
-            <div class="element element-eight-line-height">center right</div>
-        </div>
+            <div class="container container-three-line">
+                <div class="element element-seven-line">top right</div>
+            </div>
 
-        <div class="container-start container-three">
-            <div class="element element-nine-line-height">bottom right</div>
+            <div class="container container-three-line">
+                <div class="element element-eight-line">center right</div>
+            </div>
+
+            <div class="container container-three-line">
+                <div class="element element-nine-line">bottom right</div>
+            </div>
         </div>
     </div>
-
-    <div class="wrapper-end">
-        <!-- Line-height end -->
-        <div class="container container-one-line">
-            <div class="element element-one-line">top left</div>
-        </div>
-
-        <div class="container container-one-line">
-            <div class="element element-two-line">center left</div>
-        </div>
-
-        <div class="container container-one-line">
-            <div class="element element-three-line">bottom left</div>
-        </div>
-
-        <div class="container container-two-line">
-            <div class="element element-four-line">top center</div>
-        </div>
-
-        <div class="container container-two-line">
-            <div class="element element-five-line">center center</div>
-        </div>
-
-        <div class="container container-two-line">
-            <div class="element element-six-line">bottom center</div>
-        </div>
-
-        <div class="container container-three-line">
-            <div class="element element-seven-line">top right</div>
-        </div>
-
-        <div class="container container-three-line">
-            <div class="element element-eight-line">center right</div>
-        </div>
-
-        <div class="container container-three-line">
-            <div class="element element-nine-line">bottom right</div>
-        </div>
-    </div>
-
 </body>
 
 </html>
