--- a/pages/positions.html
+++ b/pages/positions.html
@@ -19,80 +19,82 @@
     </div>
 
     <!-- Position -->
-    <div class="wrapper">
-        <div class="container-position">
-            <div class="element element-position-1">top left</div>
+    <div class="wrapper-content">
+        <div class="wrapper">
+            <div class="container-position">
+                <div class="element element-position-1">top left</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-2">center left</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-3">bottom left</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-4">top center</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-5">center center</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-6">bottom center</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-7">top right</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-8">center right</div>
+            </div>
+
+            <div class="container-position">
+                <div class="element element-position-9">bottom right</div>
+            </div>
         </div>
 
-        <div class="container-position">
-            <div class="element element-position-2">center left</div>
-        </div>
+        <!-- Position end -->
+        <div class="wrapper-end">
+            <div class="container-position-end">
+                <div class="element-position element-position-one">top left</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-3">bottom left</div>
-        </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-two">center left</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-4">top center</div>
-        </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-three">bottom left</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-5">center center</div>
-        </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-four">top center</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-6">bottom center</div>
-        </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-five">center center</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-7">top right</div>
-        </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-six">bottom center</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-8">center right</div>
-        </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-seven">top right</div>
+            </div>
 
-        <div class="container-position">
-            <div class="element element-position-9">bottom right</div>
-        </div>
-    </div>
+            <div class="container-position-end">
+                <div class="element-position element-position-eight">center right</div>
+            </div>
 
-    <!-- Position end -->
-    <div class="wrapper">
-        <div class="container-position-end">
-            <div class="element-position element-position-one">top left</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-two">center left</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-three">bottom left</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-four">top center</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-five">center center</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-six">bottom center</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-seven">top right</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-eight">center right</div>
-        </div>
-
-        <div class="container-position-end">
-            <div class="element-position element-position-nine">bottom right</div>
+            <div class="container-position-end">
+                <div class="element-position element-position-nine">bottom right</div>
+            </div>
         </div>
     </div>
 </body>
