--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -17,79 +17,81 @@
         <span class="icon">•••</span>
     </div>
 
-    <div class="wrapper">
-        <div class="container container-one">
-            <div class="element element-one">top left</div>
+    <div class="wrapper-content">
+        <div class="wrapper">
+            <div class="container container-one">
+                <div class="element element-one">top left</div>
+            </div>
+
+            <div class="container container-two">
+                <div class="element element-one">center left</div>
+            </div>
+
+            <div class="container container-three">
+                <div class="element element-one">bottom left</div>
+            </div>
+
+            <div class="container container-four">
+                <div class="element element-two">top center</div>
+            </div>
+
+            <div class="container container-five">
+                <div class="element element-two">center center</div>
+            </div>
+
+            <div class="container container-six">
+                <div class="element element-two">bottom center</div>
+            </div>
+
+            <div class="container container-seven">
+                <div class="element element-three">top right</div>
+            </div>
+
+            <div class="container container-eight">
+                <div class="element element-three">center right</div>
+            </div>
+
+            <div class="container container-nine">
+                <div class="element element-three">bottom right</div>
+            </div>
         </div>
 
-        <div class="container container-two">
-            <div class="element element-one">center left</div>
-        </div>
+        <div class="wrapper-end">
+            <div class="container-end container-one-end">
+                <div class="element element-one-end">top left</div>
+            </div>
 
-        <div class="container container-three">
-            <div class="element element-one">bottom left</div>
-        </div>
+            <div class="container-end container-two-end">
+                <div class="element element-one-end">center left</div>
+            </div>
 
-        <div class="container container-four">
-            <div class="element element-two">top center</div>
-        </div>
+            <div class="container-end container-three-end">
+                <div class="element element-one-end">bottom left</div>
+            </div>
 
-        <div class="container container-five">
-            <div class="element element-two">center center</div>
-        </div>
+            <div class="container-end container-four-end">
+                <div class="element element-two-end">top center</div>
+            </div>
 
-        <div class="container container-six">
-            <div class="element element-two">bottom center</div>
-        </div>
+            <div class="container-end container-five-end">
+                <div class="element element-two-end">center center</div>
+            </div>
 
-        <div class="container container-seven">
-            <div class="element element-three">top right</div>
-        </div>
+            <div class="container-end container-six-end">
+                <div class="element element-two-end">bottom center</div>
+            </div>
 
-        <div class="container container-eight">
-            <div class="element element-three">center right</div>
-        </div>
+            <div class="container-end container-seven-end">
+                <div class="element element-three-end">top right</div>
+            </div>
 
-        <div class="container container-nine">
-            <div class="element element-three">bottom right</div>
-        </div>
-    </div>
+            <div class="container-end container-eight-end">
+                <div class="element element-three-end">center right</div>
+            </div>
 
-    <div class="wrapper">
-        <div class="container-end container-one-end">
-            <div class="element element-one-end">top left</div>
-        </div>
-
-        <div class="container-end container-two-end">
-            <div class="element element-one-end">center left</div>
-        </div>
-
-        <div class="container-end container-three-end">
-            <div class="element element-one-end">bottom left</div>
-        </div>
-
-        <div class="container-end container-four-end">
-            <div class="element element-two-end">top center</div>
-        </div>
-
-        <div class="container-end container-five-end">
-            <div class="element element-two-end">center center</div>
-        </div>
-
-        <div class="container-end container-six-end">
-            <div class="element element-two-end">bottom center</div>
-        </div>
-
-        <div class="container-end container-seven-end">
-            <div class="element element-three-end">top right</div>
-        </div>
-
-        <div class="container-end container-eight-end">
-            <div class="element element-three-end">center right</div>
-        </div>
-
-        <div class="container-end container-nine-end">
-            <div class="element element-three-end">bottom right</div>
+            <div class="container-end container-nine-end">
+                <div class="element element-three-end">bottom right</div>
+            </div>
         </div>
     </div>
 </body>
