--- a/pages/location.html
+++ b/pages/location.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <img src="../src/img/palettes.png" alt="logo">
-        <p>Table cell 💚</p>
+        <p>Location 💚</p>
         <span class="icon">•••</span>
     </div>
 
