--- a/pages/grid_margin.html
+++ b/pages/grid_margin.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style_margin.css">
   <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/media_queries.css">
   <title>Alignment techniques</title>
 </head>
 
